--- a/product.html
+++ b/product.html
@@ -382,6 +382,10 @@
     </div>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script type="module" src="/src/app.js"></script>
+
 </body>
 
 </html>
